# dodo_test

./: .gitignore  README.md  avg_data.json  output.csv  pyproject.toml
src/: main.py  main_from_llm.py
